...
              <Text numberOfLines={1} style={styles.message}>
                <Text style={styles.habitName}>"{habitName}"</Text>
                <Text style={styles.messageText}> archived</Text>
              </Text>

              <Pressable
                accessibilityLabel='Undo archive'
                accessibilityRole='button'
                style={({ pressed }) => [
                  styles.undoButton,
                  pressed && styles.undoButtonPressed,
                ]}
                onPress={handleUndo}
...
